# PROG-2007

./: CMakeLists.txt  CandidateFunctions.c  CandidateFunctions.h  OfficerFunctions.c  OfficerFunctions.h  StructuresDef.h  VoterFunctions.c  VoterFunctions.h  VoterPanel.c  VoterPanel.h  main.c
